@@ -1,6 +1,6 @@
 # -*- makefile -*-
 #
-# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
+# Copyright (c) 2004-2006 The Trustees of Indiana University and Indiana
 #                         University Research and Technology
 #                         Corporation.  All rights reserved.
 # Copyright (c) 2004-2005 The University of Tennessee and The University
@@ -17,8 +17,6 @@
 # $HEADER$
 #
 
-
-
 noinst_SCRIPTS = \
      mpi-f90-interfaces.h.sh \
      mpi_address_f90.f90.sh \
@@ -27,6 +25,7 @@ noinst_SCRIPTS = \
      mpi_bsend_init_f90.f90.sh \
      mpi_buffer_attach_f90.f90.sh \
      mpi_buffer_detach_f90.f90.sh \
+     mpi_comm_spawn_multiple_f90.f90.sh \
      mpi_file_iread_f90.f90.sh \
      mpi_file_iread_at_f90.f90.sh \
      mpi_file_iread_shared_f90.f90.sh \
